tests/int/deps_command/snapshots/integration__int__deps_command__bin_only__should_deps_bin_only_grouped_format.snap
---
source: tests/int/deps_command/bin_only.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/bin_only
    - deps
    - "--format"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
main (2)
  -> config
  -> utils::helper

utils::helper (1)
  -> config

----- stderr -----
