tests/int/deps_command/snapshots/integration__int__deps_command__bin_only__should_deps_bin_only_with_depth.snap
---
source: tests/int/deps_command/bin_only.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/bin_only
    - deps
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
main -> config
main -> utils
utils -> config

----- stderr -----
